Changed header.css positioning and fixed z-index of s.css

--- a/dash/s.css
+++ b/dash/s.css
@@ -21,6 +21,7 @@ body{
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: 1;
 
 }
 .header::before{
